--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
-<!doctype html> 
+<!doctype html><!--声明是一个HTML文件--> 
 <html> 
+  <!--头部开始--> 
   <head> 
-    <meta charset="utf-8">
-    <title>网页标题</title>
-  </head>  
+    <meta charset="utf-8"><!--规定HTML文档的字符编码为utf-8--> 
+    <title>网页标题</title> 
+  </head> 
+  <!--头部结束--> 
+  <!--主体开始--> 
   <body> 
-    <p align="center"><a href=https://j.map.baidu.com/i1gDO><img src="1111.png"></a> </p>  
+    <table border="1"> 
+  <tr> 
+    <th>表头</th> 
+    <th>表头</th> 
+    <th>表头</th>
+    <th>表头</th> 
+    <th>表头</th> 
+  </tr> 
+  <tr> 
+    <td>1</td> 
+    <td>2</td> 
+    <td>3</td> 
+    <td>11</td> 
+    <td>12</td>
+  </tr> 
+  <tr> 
+    <td colspan="2">9</td>  
+    <td>6</th>
+    <td rowspan="2">28</td> 
+    <td>14</td> 
+  </tr> 
+  <tr> 
+    <td>7</td> 
+    <td>8</td> 
+    <td>9</td>
+    <td>16</td> 
+  </tr>
+  <tr> 
+    <td>17</td> 
+    <td>18</td> 
+    <td>19</td>
+    <td>20</td> 
+    <td>21</td>  
+</table>
   </body> 
+  <!--主体结束--> 
 </html>
