--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head> 
   <!--头部结束--> 
   <!--主体开始--> 
-  <body> 
+  <body>
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2::51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
     <img src="0.jpeg"> 
     <img src="789.gif">
     <table border="1"> 
