--- a/index.html
+++ b/index.html
@@ -7,44 +7,60 @@
   </head> 
   <!--头部结束--> 
   <!--主体开始--> 
-  <body>
-    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2::51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
-    <img src="0.jpeg"> 
-    <img src="789.gif">
-    <table border="1"> 
-  <tr> 
-    <th>表头</th> 
-    <th>表头</th> 
-    <th>表头</th>
-    <th>表头</th> 
-    <th>表头</th> 
-  </tr> 
-  <tr> 
-    <td>1</td> 
-    <td>2</td> 
-    <td>3</td> 
-    <td>11</td> 
-    <td>12</td>
-  </tr> 
-  <tr> 
-    <td colspan="2">9</td>  
-    <td>6</th>
-    <td rowspan="2">28</td> 
-    <td>14</td> 
-  </tr> 
-  <tr> 
-    <td>7</td> 
-    <td>8</td> 
-    <td>9</td>
-    <td>16</td> 
-  </tr>
-  <tr> 
-    <td>17</td> 
-    <td>18</td> 
-    <td>19</td>
-    <td>20</td> 
-    <td>21</td>  
-</table>
+  <body> 
+    <div style="position:fixed;bottom:5px;right:5px;opacity:1;cursor:pointer;">
+    <a href="#">
+     <img src="1.jpg">
+    </a >
+  </div>
+    <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+   <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
+  <p>你好！世界</p> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
+  <i class="fab fa-angellist"></i>
   </body> 
   <!--主体结束--> 
 </html>
